                    Changes made to Pyjamas since 0.7
                    ---------------------------------
 * Added simple sys.stdout and sys.stderr objects. The print statement
   now uses sys.stdout for printing. You can intercept print statements
   by overriding sys.stdout (e.g. for displaying them on the web page).
   By Waldemar Kornewald

 * Fixed sys.exc_info() to behave more like Python (i.e. returning the
   traceback starting from the current context instead of the whole
   execution stack). Also includes tb_frame.f_globals, contributed
   by Waldemar Kornewald

 * Added very basic traceback module with format_traceback() function
   which only works when compiling with debug information,
   contributed by Waldemar Kornewald

 * Added oninput and onpropertychange event support, thanks to Maxim
   Lacrima.

 * Make pyjsbuild call out to translator.py using subprocess.Popen,
   with a view to adding "build generators" that will create Makefiles,
   scons build files etc.  pyjsbuild should not be doing the job of make,
   and... it's doing the job of make.

 * Fix getWidget problem with HTMLTable under pyjd on Windows (mshtml,
   fixes Issue 493, contributed by Phil Charlesworth
   
 * Add parsing of XML documents under pyjd on Windows (mshtml),
   fixes Issue 481, contributed by Phil Charlesworth
   
 * Add auto-build (file monitoring) option to pyjsbuild, contributed
   by Suzan Shakya.

 * Add pyjscompressor.py from Sujan Shakya to contrib: depends on java
   and google java compressor tool.

 * Series of fixes by W Kornewald: #229, #385, #414, #417, #475 and more.
   accidental exception catching in debug handling sorted; class creation
   uses __class__ on the base (behaves like http://python.org); added
   __delattr__ support; extended tracebacks to include module imports.

 * Fix long-standing bug with DialogBox: use an overlay to capture all
   mouse events.  use same overlay trick in Controls so that slider
   capture now works, too.
