@@ -72,7 +72,7 @@ Copyright: 2010 Jordan Wii <jordonwii@gmail.com>
 Copyright: 2010 Scott Scites <scott.scites@railcar88.com>
 Copyright: 2010 Daniel Kluev <dan.kluev@gmail.com>
 Copyright: 2010 Mickael Kerbrat <mickael.kerbrat@gmail.com>
-Copyright: 2010 Phil Charlesworth <phil.charlesworth@physics.org>
+Copyright: 2010, 2011 Phil Charlesworth <phil.charlesworth@physics.org>
 Copyright: 2010 Jim Washington <washington.jim@gmail.com>
 Copyright: 2010 Karl Voigtland <voigtk@alum.rpi.edu>
 Copyright: 2011 Jérôme Poisson <goffi@goffi.org>
